# tmllib

./: .gitignore  CLAUDE.ndf.md  LICENSE  README.rst  aurora.py  bigquery.py  bigquery_gcb.py  bq_kintone.py  etltool.py  evaluator.py  iettydb.py  pyproject.toml  requirements.txt  scdv.py  setup.py  setup.sh  text2vec.py  tfrecords.py
.github/workflows/: pypi.yml
tmllib/: __init__.py  aurora.py  awstool.py  bigquery.py  bq_kintone.py  config_abc.py  elasticcache.py  etltool.py  evaluator.py  kintone.py  parallelget.py  tfrecords_local.py
tmllib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
